--- a/src/components/audioplayer/audioplayer.css
+++ b/src/components/audioplayer/audioplayer.css
@@ -7,6 +7,7 @@ div.audioPlayer {
   color: white;
   transform: scale(1.1);
   overflow: hidden;
+  /* position: relative; */
 
   div.audioPlayerAlbumArt {
     position: absolute;
