--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,23 @@
 main {
   display: flex;
   width: 100vw;
-  /* height: 100vh; */
+  height: 100vh;
+  /* overflow: auto; */
 
   section.leftSection {
-    /* display: flex; */
+    display: flex;
+    flex-direction: column;
     width: 35vw;
     height: 100%;
-    background-color: blue;
+    /* background-color: blue; */
   }
 
   section.rightSection {
-    /* overflow-y: auto; */
+    /* overflow: auto; */
+    /* height: 100; */
+    overflow-y: scroll;
+    overflow-x: hidden;
+    /* max-width: 100vh; */
     /* overflow-x: hidden; */
     gap: 20px;
     padding: 5px;
@@ -21,5 +27,8 @@ main {
     width: 47vw;
     /* background-color: red; */
     height: 100%;
+  }
+  section.rightSection::-webkit-scrollbar {
+    display: none;
   }
 }
