--- a/src/components/featuredartist/featuredartist.css
+++ b/src/components/featuredartist/featuredartist.css
@@ -1,5 +1,6 @@
 div.featuredArtist {
   width: 46vw;
+  position: relative;
   height: 20vh;
   background-color: red;
   border-radius: 15px;
@@ -7,7 +8,6 @@ div.featuredArtist {
   background-size: 100%;
   /* object-fit: cover; */
   background-position: -100%, -bottom;
-  overflow: hidden;
 
   div.sus {
     padding: 5px;
