--- a/src/components/searchbar/searchbar.css
+++ b/src/components/searchbar/searchbar.css
@@ -1,13 +1,19 @@
 div.searchBarContainer {
+  position: relative;
   display: flex;
   justify-content: space-between;
+
   gap: 5px;
 
   div.searchBarWrapper {
     background-color: #0d0d0d;
     border-radius: 25px;
+    display: flex;
+    /* justify-content: center; */
+    /* align-content: last baseline; */
 
     i {
+      margin-top: 15px;
       color: white;
       padding-left: 15px;
       padding-right: 10px;
@@ -27,10 +33,6 @@ div.searchBarContainer {
       outline: none;
 
       /* background-color: aqua; */
-    }
-
-    input.searchBar::placeholder {
-      /* color: red; */
     }
   }
 
