static implementation of music player page done

--- a/src/components/featuredartist/featuredartist.css
+++ b/src/components/featuredartist/featuredartist.css
@@ -7,10 +7,12 @@ div.featuredArtist {
   background: url("../../assets/featured_artist.jpg");
   background-size: 100%;
   /* object-fit: cover; */
+  /* overflow: hidden; */
   background-position: -100%, -bottom;
 
-  div.sus {
-    padding: 5px;
+  div.featuredArtistText {
+    /* margin-top: 3px; */
+    /* margin: 20px; */
     backdrop-filter: brightness(60%);
     width: 46vw;
     height: 20vh;
@@ -30,6 +32,7 @@ div.featuredArtist {
   p:nth-child(3) {
     font-size: 15px;
     font-weight: 500;
+    height: 10vh;
   }
   p:nth-child(2) {
     padding-top: 0;
