--- a/src/components/bottomplayer/bottomplayer.css
+++ b/src/components/bottomplayer/bottomplayer.css
@@ -10,8 +10,9 @@
 
 div.bottomPlayerWrapper {
   position: absolute;
-  opacity: 95%;
+  /* opacity: 95%; */
   margin-top: 80vh;
+
   border-radius: 15px;
   /* margin: ; */
   width: calc(0.5 * 100vw);
@@ -22,13 +23,17 @@ div.bottomPlayerWrapper {
   /* background: linear-gradient(to right, #2c3e50, #fd746c); */
   /* background-color: #2234ae;
   background-image: linear-gradient(315deg, #2234ae 0%, #191714 74%); */
-  background: radial-gradient(
+  /* background: radial-gradient(
     circle at 10% 20%,
     rgb(69, 86, 102) 0%,
     rgb(34, 34, 34) 90%
-  );
+  ); */
+  background: url("../../assets/bottom_player.png");
+  object-fit: cover;
+  background-position: 100% -100%;
   margin-left: 25vw;
   z-index: 99999;
+  border: 1px solid black;
   /* animation: slideUpFromBottom 2s 1; */
 }
 
